Load SCP-914 recipes from config JSON